<resources>
    <string name="app_name">PetPatrol</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="forgot_password">Olvidaste tu Contraseña</string>
    <string name="logo">logo</string>
    <string name="descripcion_perrito">perrito</string>
    <string name="ejemplo">Lucas busca ser adoptado por una familia cariñosa tiene 5 meses, todas las vacunas, compromiso de esterilización</string>
    <string name="perfil">Perfil</string>
    <string name="adoptar">Adoptar</string>
    <string name="agregar">Agregar</string>
    <string name="favoritos">Favoritos</string>
    <string name="hearth">Favoritos</string>
    <string name="adoptar1">Adoptar</string>
    <string name="cruce">Cruce</string>
    <string name="ayudar">Ayudar</string>
    <string name="bienvenido">BIENVENIDO\nQUE DESEAS REALIZAR HOY?</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresa_nueva_contrasena">Ingresa una nueva contraseña para que vuelvas a disfrutar de PetPatrol</string>
    <string name="restablecer_contrasena">Restablece tu contraseña</string>
    <string name="filtro">Filtro</string>
    <string name="buscar">Buscar</string>
    <string name="register">Registrarse</string>
    <string name="profile_image">Profile Imagen</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="reset">Restablecer Predeterminado</string>
    <string name="enter_paragraph">Inserta Descripcion</string>
    <string name="add_image">Inserta Imagen</string>
    <string name="todo">TODO</string>
    <string name="publicar">Publicar</string>
    <string name="filtrar">Filtrar</string>
    <string name="InserteDescripcion">Inserte descripción y número de contactoo</string>
    <string name="InserteNombre">Inserte Nombre</string>
    <string name="Publicar">Publicar</string>
    <string name="back">Regresar a Login</string>
    <string name="mascotas_registradas">Mascotas Registradas</string>
    <string name="ver_animales_publicados">Ver Animales Publicados</string>
    <string name="editar_animales">Editar Animales</string>
    <string name="regresar">Regresar</string>
    <string name="texto_de_ejemplo">Texto de ejemplo</string>
    <string name="boton_editar">Boton Editar</string>
    <string name="boton_eliminar">Boton Eliminar</string>
    <string name="s_cerrar_sesi_n">Sí, cerrar sesión</string>
    <string name="est_s_seguro_de_que_quieres_cerrar_sesi_n">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="cancelar">Cancelar</string>
    <string name="phone">Telefono</string>
    <string name="registro">Registrarse</string>
</resources>