<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-40dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImageView"
            android:layout_marginTop="-30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdoptar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rounded"
                android:text="@string/adoptar"
                android:textColor="@color/colorButtonTextColor"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAyudar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rounded"
                android:text="@string/ayudar"
                android:textColor="@color/colorButtonTextColor"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConquistar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rounded"
                android:text="@string/cruce"
                android:textColor="@color/colorButtonTextColor"
                app:cornerRadius="30dp" />
            <!-- Botones definidos aquí -->
        </LinearLayout>

        <!-- Botón de Filtro -->
        <LinearLayout
            android:id="@+id/medio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonContainer"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageButton
                android:id="@+id/btnFiltro"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_filtro" />

            <!-- SearchView al lado del botón Filtro -->
            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:iconifiedByDefault="false"
                android:queryHint="@string/buscar" />
        </LinearLayout>

        <!-- FrameLayout que contiene el RecyclerView -->
        <!-- Colocado específicamente después del SearchView y antes del BottomNavigationView -->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_navigation"
            android:layout_below="@id/medio"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPerritos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>

        <!-- BottomNavigationView -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:menu="@menu/bottom_navigation_menu" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/dialog_filter" />
</androidx.drawerlayout.widget.DrawerLayout>