<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-40dp"
        android:paddingStart="5dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        tools:ignore="RtlSymmetry" />



    <!-- Barra de búsqueda -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnFiltro"
        android:layout_below="@id/buttonContainer"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:iconifiedByDefault="false"
        android:queryHint="@string/buscar" />

    <ImageButton
        android:id="@+id/btnFiltro"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/buttonContainer"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_filtro" />
    <!-- Botones de acción principal -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdoptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/adoptar"
            android:textColor="@color/colorButtonTextColor"
            app:cornerRadius="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAyudar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/ayudar"
            android:textColor="@color/colorButtonTextColor"
            app:cornerRadius="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConquistar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/cruce"
            android:textColor="@color/colorButtonTextColor"
            app:cornerRadius="30dp" />

    </LinearLayout>


    <!-- Imagen del perrito -->
    <ImageView
        android:id="@+id/ivPerrito"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/searchView"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/perrito" />

    <!-- Descripción del perrito -->
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPerrito"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70sp"
        android:text="CRUCE WORKING"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <!-- BottomNavigationView -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
